# franconian-dialect-mcp

./: .mcp.json  CLAUDE.md  LICENSE  README.md  main.py  mcp.py  pyproject.toml  server_standalone.py
.claude/commands/: schorsch-llm.md  schorsch-mcp.md
examples/: README.md  schorsch_prompt.md
examples/demos/: demo_text.md  translation_with_mcp.md  translation_without_mcp.md
examples/orthography/: ansbach_orthography.md  reference_text_1_graffberd.txt  reference_text_2_herzla.txt  reference_text_3_henna.txt
src/dialect_mcp/: domain.py  error.py  geography.py  http_client.py  main.py  mcp.py  repository.py  search_strategy.py  server.py  service.py  validation.py
